fix: sort button visibility on sorted state

--- a/src/components/table/cells/z-th/styles.css
+++ b/src/components/table/cells/z-th/styles.css
@@ -31,7 +31,8 @@
 
   :host([show-sorting="hover"]:hover) .z-th--sort-button,
   :host([show-sorting="hover"]) .z-th--sort-button:focus:focus-visible,
-  :host([show-sorting="always"]) .z-th--sort-button {
+  :host([show-sorting="always"]) .z-th--sort-button,
+  :host([sorted]) .z-th--sort-button {
     opacity: 1;
     pointer-events: all;
   }
@@ -39,7 +40,8 @@
 
 :host([show-sorting="hover"]:hover) .z-th--sort-button::after,
 :host([show-sorting="hover"]) .z-th--sort-button:focus:focus-visible::after,
-:host([show-sorting="always"]) .z-th--sort-button::after {
+:host([show-sorting="always"]) .z-th--sort-button::after,
+:host([sorted]) .z-th--sort-button::after {
   position: absolute;
   top: 6px;
   left: 6px;
@@ -49,7 +51,7 @@
   content: "";
 }
 
-.z-th--sort-button:focus:focus-visible::after,
-.z-th--sort-button--active::after {
+:host([sorted]) .z-th--sort-button::after,
+.z-th--sort-button:focus:focus-visible::after {
   box-shadow: var(--shadow-focus-primary);
 }
